Created two new pages; DashboardPage and GradeReportPage and styled them with css. In the homepage i tried to apply routers to link the pages but failed. will continue that later.

--- a/src/components/component.css
+++ b/src/components/component.css
@@ -31,3 +31,15 @@
 p{
     font-size: 18px;
 }
+.record_grid{
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 500px;
+}
+
+.record{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    column-gap: 10px;
+   
+}
