adding updated files

--- a/src/components/help-and-support-page/help-and-support-page.module.scss
+++ b/src/components/help-and-support-page/help-and-support-page.module.scss
@@ -1,2 +1,67 @@
-.root {
+.root {}
+
+.siv {
+    width: 100%;
+    height: 109vh;
+    display: flex;
+    flex-direction: row;
 }
+
+.sev {
+    width: 75%;
+    height: 107vh;
+}
+
+.hed {
+    text-align: center;
+    border-bottom: 2px solid black;
+}
+
+.gs {
+    font-size: 2.4em;
+}
+
+.gr {
+    margin: 20px;
+}
+
+.gr {}
+
+.gs {}
+
+.gs {}
+
+.gs {}
+
+.gr {}
+
+.tis {
+    width: 100%;
+    height: 70vh;
+}
+
+.ye {
+    text-align: center;
+    border-bottom: 3px double black;
+}
+
+.viv {
+    text-align: center;
+}
+
+.mi {
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.lee {
+    text-align: center;
+}
+
+.mi {}
+
+.lee {}
+
+.mi {}
+
+.lee {}
