--- a/src/components/instructor-contact-page/instructor-contact-page.module.scss
+++ b/src/components/instructor-contact-page/instructor-contact-page.module.scss
@@ -48,9 +48,10 @@
     color: white;
     text-align: center;
     border: 1px solid white;
-    height: 35vh;
     width: 80%;
     margin-left: 30px;
+    height: 40vh;
+    margin-top: 10px;
 }
 
 .h3 {
