--- a/src/components/grade-report-page/grade-report-page.module.scss
+++ b/src/components/grade-report-page/grade-report-page.module.scss
@@ -3,11 +3,11 @@
     margin: 0;
 
     h2 {
-        margin-bottom: 16px;
+        margin-bottom: 0px;
         font-size: 45px;
-        text-align: start;
+        text-align: center;
         padding-left: 20px;
-        color: #F2C30B;
+        color: #D2C48D;
     }
 
     .semester-filter {
@@ -55,13 +55,11 @@
         }
     }
 
-    height:200vh;
-    width:100%;
-    background-color:#242424;
-    background-repeat:no-repeat;
-    background-image: url('https://cdn.vectorstock.com/i/1000x1000/96/92/dark-blue-gradient-background-vector-9199692.webp');
-    background-position: 50%;
-    background-size:cover;
+    background-color:#2A2929;
+    background-repeat:repeat;
+    background-image: none;
+    background-position: 0%;
+    background-size:auto;
     background-attachment: scroll;
     background-origin: padding-box;
     background-clip: border-box;
@@ -71,20 +69,20 @@
 
 
 .GR {
-    height: 190vh;
-    width: 94%;
+    height: 110vh;
+    width: 100%;
     margin-left: 60px;
-    background-color: rgb(36, 36, 36);
-    background-repeat: no-repeat;
-    background-image: url('https://cdn.vectorstock.com/i/1000x1000/96/92/dark-blue-gradient-background-vector-9199692.webp');
-    background-position: 50%;
-    background-size: cover;
+    background-color: #090808;
+    background-repeat: repeat;
+    background-image: none;
+    background-position: 0%;
+    background-size: auto;
     background-attachment: scroll;
     background-origin: padding-box;
     background-clip: border-box;
     opacity: 1;
     box-shadow: 1.94px 3.5px 2px black;
-    padding-left: 60px;
+    padding-left: 0px;
 }
 
 .H3 {
@@ -111,6 +109,7 @@
     padding-left: 20px;
     font-size: 20px;
     color: #FFFFFF;
+    text-align: start;
 }
 
 .SL {
@@ -132,4 +131,15 @@
 
 .NV {
     height: 180%;
+}
+
+.vi {}
+
+.ti {}
+
+.grp {}
+
+.set {
+    width: 100%;
+    height: 100vh;
 }
