--- a/src/components/missing-grade-form/missing-grade-form.module.scss
+++ b/src/components/missing-grade-form/missing-grade-form.module.scss
@@ -1,7 +1,4 @@
-.root {
-    height: 162vh;
-    width: 100%;
-}
+.root {}
 
 .MGF {
     height: 107vh;
@@ -43,7 +40,7 @@
 .input {
     height: 30px;
     width: 70%;
-    background-color: #847C7C;
+    background-color: white;
 }
 
 .btn {
@@ -53,10 +50,10 @@
     width: 100px;
     text-align: center;
     font-size: 20px;
-    background-image: linear-gradient(358deg, #006579 35%, #f6f6f6 100%);
+    background-image: linear-gradient(180deg, #8C2B2B 47%, rgba(255, 255, 255, 0) 100%);
     background-color: transparent;
-    background-position: 50% 50%;
-    background-size: 100% 100%;
+    background-position: 0% 0%;
+    background-size: auto auto;
     background-repeat: repeat;
     background-attachment: scroll;
     background-origin: padding-box;
