--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -1,11 +1,19 @@
-.root {}
+.root {
+    background-repeat: no-repeat;
+    background-image: url("https://static.wixstatic.com/media/d9657b20f1b9473f90815b9da211bb2a.jpg/v1/fit/w_924,h_520/d9657b20f1b9473f90815b9da211bb2a.jpg");
+    background-position: 50%;
+    background-size: cover;
+    background-attachment: scroll;
+    background-origin: padding-box;
+    background-clip: border-box;
+}
 
 .navBar {
     position: sticky;
     width: 100%;
     height: 80px;
     background-repeat: no-repeat;
-    background-image: none;
+    background-image: url('https://media.istockphoto.com/id/1443022226/photo/black-leather-texture-background.jpg?b=1&s=170667a&w=0&k=20&c=JluczfcCJXPyUSgATnnnuA33X2Rma_pOfDif9LdTb9Y=');
     background-position: 50%;
     background-size: cover;
     background-attachment: scroll;
@@ -17,6 +25,7 @@
     flex-direction: row;
     font-size: 20px;
     text-align: end;
+    color: white;
 }
 
 .img {
@@ -44,7 +53,8 @@
 .h1 {}
 
 .h2 {
-    margin-left: 70px;
+    margin-left: 350px;
     padding: 0px 0px 50px;
-    margin-bottom: 60px;
+    margin-bottom: 0px;
+    text-align: center;
 }
