--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -17,13 +17,20 @@
 
 .di {
     border-radius: 0px;
-    background-color: #3F3F3F;
+    background-color: transparent;
     text-align: center;
-    border: 4px dotted black;
+    border: 4px solid black;
     height: 105.3vh;
     width: 260px;
     padding-left: 10px;
     padding-right: -2px;
+    background-repeat: no-repeat;
+    background-image: url('https://media.istockphoto.com/id/1443022226/photo/black-leather-texture-background.jpg?b=1&s=170667a&w=0&k=20&c=JluczfcCJXPyUSgATnnnuA33X2Rma_pOfDif9LdTb9Y=');
+    background-position: 50%;
+    background-size: cover;
+    background-attachment: scroll;
+    background-origin: padding-box;
+    background-clip: border-box;
 }
 
 .vi {
