--- a/project/src/SupportBody.css
+++ b/project/src/SupportBody.css
@@ -18,6 +18,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+
 }
 .help-desk{
     position: relative;
@@ -31,13 +32,32 @@
     font-size: 90px;
     text-align: center;
 }
+
 .accordion-container{
     display: flex;
-    justify-content: end;
-    align-items: end;
-    width: 1000px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color:rgba(8, 8, 73, 0.9);
 }
 .accord-holder{
     text-align: center;
     width: 700px;
+    background-color:rgb(8, 8, 73);
+
+}
+
+
+.header{
+    background-color:rgb(8, 8, 73);
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+.accordion{
+    font-weight: bold;
+}
+.info{
+    font-weight: lighter;
 }
