--- a/grade/src/index.css
+++ b/grade/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.main {
+  margin-bottom: 70px;
+}
+
+.container mt-5{
+  margin-bottom: 70px;
+}
+
