--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,30 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+    --primary-color: #232559;
+    --secondary-color: #ba8f4a;
+    --unscroll-header-height: 5cm;
   }
-  a:hover {
-    color: #747bff;
+
+form-group {
+    border: 2px solid #23255979;
+    transition: 0.1s;
   }
-  button {
-    background-color: #f9f9f9;
+  
+  .form-group.active {
+    border: 2px solid var(--primary-color);
+    transition: 0.1s;
   }
-}
+  
+  .form-group.disabled {
+    opacity: 0.4;
+  }
+  
+  .form-group.active .label{
+    transition: 0.1s;
+    transform: translateY(-25px);
+    font-weight: bold;
+    color: var(--primary-color);
+  }
