--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,9 @@ a.nav-link{
 }
 
 
-div.me-auto.navbar-nav{
-    
-}
 
-img.d-inline-block.align-top{
-    
    
-}
+
 .login-container{
     display: flex;
     flex-direction: column;
@@ -49,14 +44,14 @@ img.d-inline-block.align-top{
 .login-text{
     color:rgb(23, 23, 103);
     font-size: 30px;
+    font-style:inherit;
     font-weight:bolder;
     text-align: center;
 
     
 }
 
-.box{
-}
+
  
 .login-input1{
     margin-top: 25px;
@@ -87,4 +82,116 @@ img.d-inline-block.align-top{
     border-radius: 40px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
+}
+
+/*GRADEREPORT*/
+
+.gradetable{
+    margin-left: 650px;
+    width: 100%;
+}
+
+
+.report-headers{
+    margin-left: 60px;
+}
+
+
+/*MISSINGGRADE*/
+.missinggrade form label{
+    text-align: justify;
+}
+
+.namebox{
+    margin: auto;
+    margin-left: 50px;
+    margin-top: 50px;
+
+}
+
+.form-name{
+    margin:auto;
+    margin-right: 50px;
+    width: 300px;
+    border:none;
+    border-bottom: 1px solid ;
+    background-color: azure;
+    }
+
+
+    .form-name2{
+        margin:auto;
+        width: 650px;
+        border:none;
+    border-bottom: 1px solid ;
+    background-color: azure;
+        
+    
+    }
+
+    .form-name3{
+        margin:auto;
+        width: 650px;
+        height: 80px;
+        border:1px solid;
+    background-color: azure;
+        
+    
+    }
+
+.missinggrade{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 70px;
+    background-color:azure;
+    padding-bottom: 30px;
+    width: 800px;
+    border-radius: 15px;
+    box-shadow: 1px 1px 5px;
+}
+
+
+
+.form-title{
+    border-bottom: 1px solid;
+    height: 80px;
+    background-color: rgb(7, 7, 45);
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
+
+.form-title h2{
+    color: rgb(255, 255, 255);
+    margin-top: 18px;
+}
+
+.submit-button{
+    padding: 4px 18px;
+    border-radius: 7px;
+    font-family: system-ui;
+    font-weight: bolder;
+    color:whitesmoke ;
+    background-color:rgb(7, 7, 45); ;
+    transition: 0.4s;
+}
+
+.submit-button:hover{
+    padding: 4px 18px;
+    border-radius: 7px;
+    font-family: system-ui;
+    font-size: larger;
+    font-weight: bolder;
+    color:whitesmoke ;
+    background-color:rgb(7, 7, 45); ;
+}
+
+.namebox label{
+    color:rgb(7, 7, 45); 
+    font-weight:500;
+}
+
+.id-box label{
+    color:rgb(7, 7, 45); 
+    font-weight:500;
 }
