Updated the files

--- a/src/components/dash-board/dash-board.module.scss
+++ b/src/components/dash-board/dash-board.module.scss
@@ -4,6 +4,7 @@
     height: 110vh;
     display: flex;
     flex-direction: row;
+    width: 100%;
 }
 
 .ut {
@@ -25,3 +26,5 @@
     background-origin: padding-box;
     background-clip: border-box;
 }
+
+.hip {}
