--- a/src/components/grade-report-page/grade-report-page.module.scss
+++ b/src/components/grade-report-page/grade-report-page.module.scss
@@ -1,12 +1,11 @@
 .root {
-    max-width: 1280px;
     margin: 0;
 
     h2 {
         margin-bottom: 0px;
         font-size: 45px;
         text-align: center;
-        padding-left: 20px;
+        padding-left: 0px;
         color: #D2C48D;
     }
 
@@ -63,6 +62,7 @@
     background-attachment: scroll;
     background-origin: padding-box;
     background-clip: border-box;
+    width:100%;
 
 
 }
@@ -71,7 +71,7 @@
 .GR {
     height: 110vh;
     width: 100%;
-    margin-left: 60px;
+    margin-left: 0px;
     background-color: #090808;
     background-repeat: repeat;
     background-image: none;
@@ -142,4 +142,12 @@
 .set {
     width: 100%;
     height: 100vh;
+}
+
+.bck {}
+
+.bk {
+    width: 40px;
+    height: 40px;
+    color: #FFFFFF;
 }
