--- a/src/components/instructor-contact-page/instructor-contact-page.module.scss
+++ b/src/components/instructor-contact-page/instructor-contact-page.module.scss
@@ -1,4 +1,7 @@
-.root {}
+.root {
+    background-color: #000000;
+    width: 100%;
+}
 
 .vid {
     background-color: #090505;
@@ -36,6 +39,7 @@
     display: flex;
     flex-direction: column;
     height: 50vw;
+    width: 100%;
 }
 
 .divi {
