--- a/src/components/missing-grade-form/missing-grade-form.module.scss
+++ b/src/components/missing-grade-form/missing-grade-form.module.scss
@@ -11,7 +11,7 @@
     background-origin: padding-box;
     background-clip: border-box;
     background-color: transparent;
-    width: 70%;
+    width: 100%;
 }
 
 .sec {}
@@ -19,8 +19,10 @@
 .form {
     display: flex;
     flex-direction: column;
-    width: 400px;
-    padding-left: 90px;
+    padding-left: 200px;
+    text-align: start;
+    align-self: start;
+    width: 700px;
 }
 
 .h2 {
@@ -39,7 +41,7 @@
 
 .input {
     height: 30px;
-    width: 70%;
+    width: 60%;
     background-color: white;
 }
 
@@ -64,4 +66,10 @@
 
 .fle {
     display: flex;
+}
+
+.bck {
+    width: 40px;
+    height: 40px;
+    color: #FFFFFF;
 }
