5 pages done yeahhhhhhhhhhhhhhhhhh

--- a/missing grades/src/App.css
+++ b/missing grades/src/App.css
@@ -3,7 +3,6 @@
 body {
   background: linear-gradient(to bottom, #02353c, #449342);
   color: white;
-  height: 700px;
 }
 
 .missingGrades {
@@ -13,7 +12,6 @@ body {
   margin-top: 50px;
 }
 
-.missingGrades h1,
 .missingGrades .lead {
   color: white;
 }
@@ -26,20 +24,22 @@ body {
   background-color: transparent;
   align-self: left;
   border-color: #2eaf7d;
+  margin-bottom: 200px;
 }
 
 .app-buttons: hover {
   background-color: transparent;
   align-self: left;
   border-color: #3fdco9;
+  
 }
 
 
 .nav-list {
-  margin-top: 30px;
-height: 100px;
+height: 120px;
 border-bottom: 1px solid #2eaf7d;
 font-size: 20px;
+background-color: #02353c;
 }
 
 .text-center{
@@ -48,11 +48,11 @@ font-size: 20px;
 
 .header-text {
   margin-right: 10px;
+  margin-top: 27px;
 }
 
 .login {
 margin-left: 200px;
-padding-left: 6px;
-  padding-right: 60px;
-  border-radius: 200px;
+margin-top: 27px;
+border-radius: 200px;
 }
