--- a/my-react-app/src/Components/Landing/landing.css
+++ b/my-react-app/src/Components/Landing/landing.css
@@ -5,7 +5,7 @@
     list-style: none;
    
   }
-  .header{
+  .header_land{
     min-height: 100vh;
     width: 100%;
     /*background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(../Assets/download.jpeg);*/
@@ -13,62 +13,13 @@
     background-position: center unset;
     position: relative;
   }
-  nav {
-    display: flex;
-    padding: 2% 6%;
-    justify-content: space-between;
-    align-items: center;
-    height: 20px;
-    width: 88%;
-    background:none;    
-  }
-  nav img{
-    width: 200px;
-  }
-
-  .nav-links{
-    flex: 1;
-    text-align: right;
-    transition: 1s;
-    color: black;
-  }
-  .nav-links ul li{
-    list-style-type: none;
-    display: inline-block;
-    padding: 8px 12px;
-    position: relative;
-  }
-  .nav-links ul li a{
-    color: white;
-    font-size: 16px;
-    text-decoration: none;
-  }
-  
-  .nav-links ul li a:hover{
-    color: black;
-    font-size: 16px;
-    font-weight: bold;
-  }
-  .nav-links ul li::after{
-    background:rgb(12, 4, 4);
-    display: block;
-    margin: auto;
-    transition: 1s;
-  }
-  .nav-links ul li:hover::after{
-    font-weight: bold;
-    }
 
 
-  nav .fa{
-    display: none;
-  }
-
-  .footer .row{
+  .footer_land .row_land{
     display: flex;
     flex-wrap: wrap;
   }
-  .footer{
+  .footer_land{
     position: absolute;
     background-color: #001F3F;
     width: 100%;
@@ -76,28 +27,28 @@
     padding: 70px 0;
   }
   
-  .footer-column ul{
+  .footer-column_land ul{
     list-style: none;
     padding: 0;
   }
   
-  .footer-column ul li{
+  .footer-column_land ul li{
     margin-bottom: 8px;
   }
   
-  .footer-column a{
+  .footer-column_land a{
     display: block;
     color: aliceblue;
   }
   
-  .footer-column a:hover{
+  .footer-column_land a:hover{
     display: block;
     color: aliceblue;
     font-weight: bold;
   
   }
   
-  .footer-column ul li p{
+  .footer-column_land ul li p{
     color: white;
   }
   
@@ -105,7 +56,7 @@
     color: white;
     font-weight: bold;
     }
-  .footer-column{
+  .footer-column_land{
     width: 29%;
     padding: 0 14px;
     box-sizing: border-box;
@@ -113,14 +64,14 @@
     margin-bottom: 10px;
   }
   
-  .footer-column h4{
+  .footer-column_land h4{
     font-size: 18px;
     text-transform: capitalize;
     margin-bottom: 25px;
     color: aliceblue;
   }
   
-  .form{
+  .form_land{
     color: white;
     height: 30px;
     margin-top: 2%;
@@ -128,18 +79,18 @@
   }
 
 
-  .form-control{
+  .form-control_land{
     color: white;
     height: 30px;
     border-radius: 15px;
 
   }
-  .news{
+  .news_land{
     color: white;
     height: 30px;    
   }
   
-  .form button{
+  .form_land button{
     border-radius: 20px;
     width: 80px;
     height: 40px;
@@ -151,7 +102,7 @@
     margin-left: 2%;
   }
   
-  .form button:hover {
+  .form_land button:hover {
     border-radius: 20px;
     width: 80px;
     height: 40px;
@@ -163,20 +114,30 @@
     transition: 1s ease-in-out;
   }
   
-  .copyright p{
+  .copyright_land p{
     color: gray;
     text-align: right;
     font-weight: lighter;
     margin-left: 10%;
   }
-  .copyright p:hover{
+  .copyright_land p:hover{
     color: white;
     text-align: right;
     font-weight: lighter;
   }
-  .logo{
-    width: 200px;
-    height: 150px;
-  }
+.icons_land {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.social-icon {
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+}
+
+
+
 
   
