--- a/my-react-app/src/Components/Login/login.css
+++ b/my-react-app/src/Components/Login/login.css
@@ -1,87 +1,83 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 30px;
-    margin: auto;
-    margin-top: 2oopx;
-    width: 6oopx;
-    padding-bottom: 30px;
-    background-repeat: no-repeat;
-    }
-    .header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 9px;
-      width: 100%;
-      margin-top: 30px;
-    }
-    .text {
-      color: rgb(224, 165, 16) ;
-      font-size: 48px;
-      font-weight: 700;
-    }
-    .underline {
-      width: 61px;
-      height: 6px;
-      background: rgb(8, 8, 129);
-      border-radius: 9px;
-    }
-    .inputs{
-        margin-top: 55px;
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
-    }
-    .input {
-      display: flex;
-      align-items: center;
-      margin: auto;
-      width: 200px;
-      height: 40px;
-      background: white;
-      border-radius: 15px;
-    }
-    .input input{
-        height: 40px;
-        width: 200px;
-        background: transparent;
-        border-radius: 15px;
-        color: gray;
-        font-size: 15px;
-    }
-  .input .icon{
-      height: 10px;
-    }
-.forgot {
-  padding-left: 62px;
-  margin-top: 27px;
-  color: gray;
-  font-size: 18px;
-  text-align: center;
-}
-.forgot span{
-    color: goldenrod;
-    cursor: pointer;
-    }
-.submit-container {
+.container_login {
   display: flex;
-  gap: 30px;
-  margin: 60px auto;
+  flex-direction: column;
+  margin: 0;
 }
-.submit {
+.header_login {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  width: 100px;
-  height: 20px;
-  color: white;
-  background: blueviolet;
-  border-radius: 50px;
-  font-size: 19px;
-  font-weight: 700;
-  cursor: pointer;
+  width: 100%;
+  margin: 0;
 }
-.submit:hover{
-  background-color: white;
+.text_login {
+  color: goldenrod;
+  font-size: 48px;
+  font-weight: 700;
+  margin: 0;
+  margin-top: 0;
+}
+.inputs_login{
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+.input_login {
+display: flex;
+align-items: center;
+margin: 0%;
+width: 200px;
+height: 40px;
+border-radius: 15px;
+margin: 0;
+}
+.input_login input{
+  height: 40px;
+  width: 200px;
+  background: white;
+  border-radius: 15px;
+  color: gray;
+  font-size: 15px;
+  margin: 0;
+}
+.inputs_login img{
+height: 20px;
+width: 20px;
+margin: 0;
+}
+.forgot_login {
+padding-left: 62px;
+color: gray;
+font-size: 18px;
+text-align: center;
+margin: 0;
+}
+.forgot_login span{
+color: goldenrod;
+cursor: pointer;
+font-size: 18px;
+margin: 0;
+}
+.submit-container_login {
+display: flex;
+margin: 0.1px auto;
+margin: 0;
+}
+.submit_login {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 90px;
+height: 10px;
+color: white;
+background: blueviolet;
+border-radius: 20px;
+font-size: 19px;
+font-weight: 700;
+cursor: pointer;
+margin: 0;
+
+}
+.submit_login:hover{
+background-color: goldenrod;
 }
