--- a/missing-grade-reporting-system/src/Components/Help-Support-Page/helpSupport.css
+++ b/missing-grade-reporting-system/src/Components/Help-Support-Page/helpSupport.css
@@ -1,3 +1,57 @@
 #support-section {
-    
+    width: 1000px;
+    margin: auto;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.help-div {
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 200px;
+}
+
+.help-div input {
+    width: 700px;
+    height: 30px;
+    border-radius: 50px;
+    border: 1px solid #ccc;
+}
+
+.search-container {
+    position: relative;
+    width: 70%; /* Adjust the width as needed */
+    margin: auto;
+  }
+  
+  .search-icon {
+    position: absolute;
+    top: 35%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+
+
+.help-links h1 {
+    text-align: center;
+}
+
+.quicklinks-div {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 50px;
+}
+
+.quicklinks-div p {
+    padding-bottom: 15px;
+}
+
+.quicklinks-div p a {
+    color: rgb(99, 86, 86);
+}
+
+.faqs-div p:hover {
+    color: rgb(113, 113, 113);
+    cursor: pointer;
 }
