--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .App{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
+    background: bisque;
+    padding: 20px;
+    column-gap: 10px;
+    row-gap: 10px;
 }
