--- a/src/Styling/Dashboard.css
+++ b/src/Styling/Dashboard.css
@@ -5,24 +5,34 @@
     justify-content: space-evenly;
     height: 100vh;
     width: 100%;
-    padding-top: 20px;
     gap: 5px;
   }
 
 .topSection {
+  margin-top: -20px;
+  background-color: #0000ff7e;
+  width: 100%;
+  height: 70px;
+  padding: 10px;
+  margin-top: 0px;
   display: flex;
   flex-direction: row;
   gap: 20px;
 }
 
 .logo {
-  margin-top: -10px;
+  margin-top: 6px;
+  margin-left: 25px;
 }
 
 .title {
+  margin-left: -16px;
+  padding: 20px;
+  color: white;
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 650px;
 }
 
 .title1 {
@@ -40,16 +50,17 @@
 
 
 .middleSection0 {
-  
+  margin-top: 30px;
   border-radius: 20px;
   gap:10px;
   justify-content: center;
   align-items: center;
-  height: 96%;
+  height: 87%;
   width: 60%;
-  background-color: #eee;
   display: flex;
   flex-direction: row;
+  border-style: groove groove;
+
 }
 
 
@@ -91,34 +102,24 @@
 }
 
 .middleSection1 {
+  margin-top: 30px;
     border-radius: 20px;
     justify-content: center;
     align-items: center;
-    height: 96%;
+    height: 87%;
     width: 30%;
-    background-color: #eee;
+    border-style: groove groove;
     display: flex;
     flex-direction: column;
 }
 
 .middleSection10 {
-  border-radius: 20px;
   justify-content: center;
   align-items: center;
-  height: 96%;
-  width: 96%;
+  height: 76%;
+  width: 86%;
   background-color: white;
   display: flex;
   flex-direction: column;
 }
 
-.loginButton {
-  background-color: #0000ff7e;
-  border-width: 0px;
-  border-radius: 50px;
-  margin-top: 240px;
-  margin-left: 190px;
-  width: 110px;
-  height: 35px;
-  color: white;
-}
