--- a/src/Styling/Landing.css
+++ b/src/Styling/Landing.css
@@ -5,7 +5,6 @@
     justify-content: space-evenly;
     height: 100vh;
     width: 100%;
-    padding-top: 20px;
     gap: 5px;
   }
 
@@ -31,22 +30,25 @@
 
 
 .middleSectionh {
+  margin-top: -98px;
   border-radius: 20px;
   font-size: 14px;
   gap:20px;
   justify-content: center;
   align-items: center;
-  height: 80%;
-  width: 80%;
-  background-color: #0000ff80;
+  height: 90%;
+  width: 70%;
   display: flex;
   flex-direction: row;
 }
 
 .middleSectionh0 {
-  height: 90%;
+  height: 60%;
   width: 47%;
-  background-color: white;
+  background-color: #0000ff7e;
+  color: white;
+  border-radius: 20px;
+  justify-s: ;
 }
 
 .m0texth {
@@ -60,9 +62,13 @@
 }
 
 .middleSection1h {
-  height: 90%;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
   width: 47%;
-  background-color: white;
+  background-color: #0000ff7e;
+  color: white;
+  border-radius: 20px;
 }
 
 .m1texth {
@@ -76,7 +82,7 @@
 }
 
 .loginButton {
-  background-color: #0000ff7e;
+  background-color: goldenrod;
   border-width: 0px;
   border-radius: 50px;
   margin-top: 240px;
