--- a/src/Styling/Login.css
+++ b/src/Styling/Login.css
@@ -15,6 +15,7 @@
     border-top-width: 20px;
     display: flex;
     flex-direction: column;
+    border-style: groove groove;
     align-items: center;
     justify-content: center;
   }
