styled my help and support page

--- a/src/style.css
+++ b/src/style.css
@@ -195,3 +195,62 @@ a.nav-link{
     color:rgb(7, 7, 45); 
     font-weight:500;
 }
+
+/*HELP AND SUPPORT*/
+.help-header{
+    height: 130px;
+    background-color: rgb(51, 166, 128);
+    
+}
+
+
+
+.search-bar{
+    margin-top: 20px;
+    
+}
+
+.search-bar input{
+    width: 400px;
+    height: 40px;
+    border: none;
+}
+
+.acc-box{ 
+    width: 800px;
+    margin:auto;
+}
+
+.contact-support{
+    margin-top: 50px;
+    border: 1px solid;
+    width:800px;
+    height: 150px;
+    margin: auto;
+    margin-top:50px;
+    border-radius: 4px;
+}
+
+.contact-support-btn{
+    margin-top: 110px;
+    margin-left: -590px;
+    font-family: system-ui;
+    font-weight: bolder;
+    color:whitesmoke ;
+    background-color:rgb(4, 4, 98);
+    transition: 0.4s;
+    border:none;
+    border-radius:6px;
+    height:35px;
+}
+
+
+.acc-header{
+    color:rgb(4, 4, 98);
+    font-size: 20px;
+}
+
+.acc-head{
+    color:rgb(4, 4, 98);
+    font-family: system-ui;
+}
