--- a/src/pages/Homepage/css/index.css
+++ b/src/pages/Homepage/css/index.css
@@ -222,6 +222,7 @@ margin-top:10% ;
   margin: 10px 10px;
   padding: 10px ;
   background-color: rgb(235, 234, 234);
+  overflow: hidden;
 }
 .questions{
   text-align: center;
