--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,12 @@
   padding-top: 30px;
   padding-bottom: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 97%;
 }
 
 #signuppagebg {
-  margin-top: 70px;
+  margin-top: 10px;
+  width: 97%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -59,7 +61,6 @@
 #sidebarContentPositioning {
   flex-grow: 1;
   margin-left: 250px;
-
 }
 
 #sidebarFooterPositioning {
@@ -89,7 +90,6 @@ td {
 table {
   width: 100%;
   border-collapse: collapse;
-
 }
 th,
 td {
