Setup of my navigation bar.

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     padding: 30px;
     column-gap: 10px;
     row-gap: 10px;
-    background-color: #333;
+    background-color: #3d0303;
     overflow: hidden;
     font-family: Arial;
     font-size: 21px;
