--- a/grade/src/App.css
+++ b/grade/src/App.css
@@ -38,7 +38,7 @@
 }
 
 body {
-  background: linear-gradient(to right, #2d2c2c, #ceb0069c); /* Black to Gold gradient */
+  background: linear-gradient(to right, #e5ccc3, #6047df); /* Black to Gold gradient */
   margin: 0;
   font-family: Arial, sans-serif;
   color: #f1eeee;
