--- a/grade/src/Components/Navbar.css
+++ b/grade/src/Components/Navbar.css
@@ -26,10 +26,6 @@
   transition: all 0.3s ease;
 }
 
-.nav-link:hover {
-  color: #f8f9fa; /* Hover color */
-}
-
 button {
   background-color: transparent;
   color: #fff;
@@ -43,4 +39,19 @@ button {
 button:hover {
   background-color: #fff;
   color: #007bff;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-brand {
+    margin-bottom: 10px;
+  }
+
+  .nav-link {
+    margin: 5px 0;
+  }
 }
