added an image for current grades to dashboard

--- a/assignment1/src/components/DashboardPage.css
+++ b/assignment1/src/components/DashboardPage.css
@@ -6,6 +6,21 @@
   .dashboard-body {
     margin-left: 90px;
   }
+
+  .dashboard-title2 {
+    margin-left: 300px;
+  }
+
+  .dashboard-body2 {
+    margin-left: 100px;
+  }
+
+  .CurrentGradesImage:hover {
+    transform: scale(0.999); 
+    box-shadow: 0px 16px 40px grey;
+  }
+
+
   
   /* Modern styling for your dashboard buttons */
   .dashboard-button {
