modified the dashboard

--- a/missing-grade-reporting-system/src/components/Dashboard/DashBoard.css
+++ b/missing-grade-reporting-system/src/components/Dashboard/DashBoard.css
@@ -1,4 +1,4 @@
-/* components/Dashboard.css */
+
 
 .dashboard {
     padding: 10px;
@@ -6,7 +6,7 @@
   
   .dashboard-content {
     margin-top: 100px;
-    /* Add styles for the main content of the Dashboard */
+   
   }
   
   .dashboard-content h1 {
@@ -16,11 +16,11 @@
   .dashboard-content h1::after {
     content: '';
     position: absolute;
-    left: 50%; /* Position the line in the middle */
+    left: 50%; 
     bottom: 0;
-    width: 10%; /* Adjust the width of the line as needed */
-    height: 5px; /* Adjust the thickness of the line as needed */
-    background-color: #000; /* Set the color of the line */
-    transform: translateX(-50%); /* Center the line horizontally */
+    width: 10%; 
+    height: 5px; 
+    background-color: #000; 
+    transform: translateX(-50%); 
     border-radius: 8px;
   }
