added userinfo function .css

--- a/missing-grade-reporting-system/src/components/UserInfo/UserInfo.css
+++ b/missing-grade-reporting-system/src/components/UserInfo/UserInfo.css
@@ -1,20 +1,36 @@
-/* components/UserInfo/UserInfo.css */
+
 
 .user-info-container {
-    display: flex;
-    background-color: #2b2929; /* Light gray background */
-    padding: 10px;
-    border-radius: 8px; /* Rounded corners */
-    color: black;
-  }
-  
-  .user-info {
-    flex: 1; /* Take up remaining space */
-  }
-  
-  .user-info p {
-    margin: 0; /* Remove default paragraph margin */
-  }
-  
-  /* Add any additional styling as needed */
-  
+  background-color: #1e1e1e; 
+  color: #fff; 
+  padding: 20px;
+  border-radius: 8px;
+  position: fixed; 
+  top: 50px;
+  left: 0;
+  height: 90vh; 
+  width: 220px; 
+  display: flex;
+  flex-direction: column;
+}
+
+.user-info-header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.user-info-content {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.user-info-content p {
+  margin: 10;
+}
+
+.user-info-content strong {
+  margin-right: 10px;
+}
+
+
